src/test/resources/LO-2/InvalidPrograms/test_14.lo
// *Bad testcase*
// Incomplete expression

int foo(int a)
{
  int b;
  {
    b = (a+10);
    return b;
  }
}

int main()
{
  {return foo((5+));}
}
